<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.authentication.presentation.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/login_auth_card"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/login_auth_bg"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginEmail"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterTextColor="@color/black"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginPassword"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    app:hintTextColor="@color/colorShimmerFooterLabel"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvLoginForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="37dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>