<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.authentication.presentation.signup.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/login_auth_card"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/login_auth_bg"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingHorizontal="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSignupFullName"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterTextColor="@color/black"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSignupFullName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/full_name_hint"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSignupEmail"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterTextColor="@color/black"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSignupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSignupPassword"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    app:hintTextColor="@color/colorShimmerFooterLabel"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSignupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSignupConfirmPassword"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorShimmerFooterLabel"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    app:hintTextColor="@color/colorShimmerFooterLabel"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtConfirmSignupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorShimmerFooterLabel" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/signup_button"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>