<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".feature.home.presentation.HomeScreenFragment"
    android:id="@+id/swipeRefreshLayout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical">

            <!-- Popular Movies Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <TextView
                        android:id="@+id/tvPopularText"
                        style="@style/CategoryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home_popular_title"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvShowAllPopularMovies"
                            style="@style/SeeAllText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_see_all"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="normal" />

                        <ImageView
                            android:id="@+id/ivSeeAllIcon"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/home_see_all"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/shimmerPopular"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layoutAnimation="@anim/anim"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/home_movie_item" />
            </LinearLayout>

            <!-- Upcoming Movies Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <TextView
                        android:id="@+id/tvUpcomingText"
                        style="@style/CategoryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home_upcoming_title"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvShowUpcomingMovies"
                            style="@style/SeeAllText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_see_all"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="normal" />

                        <ImageView
                            android:id="@+id/ivSeeAllIconUpcoming"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/home_see_all"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/shimmerUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUpcomingMovies"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/anim"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/home_movie_item" />
            </LinearLayout>

            <!-- Trending Movies Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_trending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <TextView
                        android:id="@+id/tvTrendingText"
                        style="@style/CategoryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home_trending_title"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvShowAllTrendingMovies"
                            style="@style/SeeAllText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_see_all"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="normal" />

                        <ImageView
                            android:id="@+id/ivSeeAllIconTrending"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/home_see_all"
                            android:src="@drawable/arrow_right" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/shimmerTrend"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRatedMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/anim"
                    android:visibility="gone"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/home_movie_item" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/shimmerEffectLayout"
        layout="@layout/layout_shimmer_home_movies"
        android:visibility="gone" />

    <include
        android:id="@+id/errorLayout"
        layout="@layout/layout_error_movie_detail"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>